--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
       <nav class="main-nav float-right d-none d-lg-block" >
         <ul>
-          <li class="active"><a href="Salarydost.php">Home</a></li>
+          <li class="active"><a href="https://snehahello20.github.io/index.html/">Home</a></li>
           <li class="drop-down"><a href="#">About</a>
               <ul>
-               <li><a href="about.php" >SalaryDost</a></li>
+               <li><a href="https://snehahello20.github.io/about.php/" >SalaryDost</a></li>
                <li><a href="team.php">Team</a></li>
               </ul>
           </li>
