--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <li class="drop-down"><a href="#">About</a>
               <ul>
                <li><a href="https://snehahello20.github.io/about.php/" >SalaryDost</a></li>
-               <li><a href="team.php">Team</a></li>
+               <li><a href="team.php/">Team</a></li>
               </ul>
           </li>
           <li class="drop-down"><a href="#">Community</a>
