--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
           <li class="active"><a href="https://snehahello20.github.io/index.html/">Home</a></li>
           <li class="drop-down"><a href="#">About</a>
               <ul>
-               <li><a href="https://snehahello20.github.io/about.php/" >SalaryDost</a></li>
-               <li><a href="team.php/">Team</a></li>
+               <li><a href="about.md/" >SalaryDost</a></li>
+               <li><a href="team.md/">Team</a></li>
               </ul>
           </li>
           <li class="drop-down"><a href="#">Community</a>
